Dumped asset pipeline
This app is too simple to need the added deployment complexity

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -7,7 +7,7 @@
     <h2 class="sidebar-title">About Me</h2>
     <dl class="profile-datablock">
       <dt class="profile-img">
-        <%= link_to image_tag("jason.jpg", width: "53", height: "80", alt: "My Photo"), root_path %>
+        <%= link_to image_tag("/images/jason.jpg", width: "53", height: "80", alt: "My Photo"), root_path %>
       </dt>
       <dd class="profile-data">
         <strong>Name:</strong>  Jason Rush
