--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
   <head>
     <title><%= get_title %></title>
     <%= yield :feeds %>
-    <%= stylesheet_link_tag    "application", media: "all" %>
-    <%= javascript_include_tag "application" %>
+    <%= stylesheet_link_tag "/stylesheets/default", media: "all" %>
     <%= csrf_meta_tags %>
   </head>
   <body>
