--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -1,9 +1,3 @@
-<% content_for :feeds do %>
-  <% Blog.all.each do |blog| %>
-    <link rel="alternate" type="application/rss+xml" title="<%= 'Jason Rush: ' + blog.name.titleize %> - RSS" href="<%= rss_blog_posts_url(blog_id: blog, format: 'xml') %>" />
-  <% end %>
-<% end %>
-
 <p>
   Hello! You found me!
 </p>
@@ -21,7 +15,7 @@
   or check out my blogs:
 </p>
 <p class="footer">
-  <% @blogs.each do |blog| %>
-    <%= link_to image_tag("/images/#{blog.name}.png", alt: blog.title, class: "#{blog.name}-logo"), blog_posts_path(blog) %>
-  <% end %>
+  <a href="/blogs/{{blog.name}}/posts" ng-repeat="blog in blogs">
+    <img src="/images/{{blog.name}}.png" alt="{{blog.title}}" class="{{blog.name}}-logo" />
+  </a>
 </p>
