--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr" ng-app="jasonrushApp">
   <head>
     <title><%= get_title %></title>
-    <%= yield :feeds %>
+    <% Blog.all.each do |blog| %>
+      <link rel="alternate" type="application/rss+xml" title="<%= 'Jason Rush: ' + blog.name.titleize %> - RSS" href="<%= rss_blog_posts_url(blog_id: blog, format: 'xml') %>" />
+    <% end %>
     <%= stylesheet_link_tag "/stylesheets/default", media: "all" %>
     <%= javascript_include_tag "/javascripts/vendor/angular.min.js" %>
     <%= javascript_include_tag "/javascripts/vendor/angular-route.min.js" %>
