--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -15,7 +15,7 @@
   or check out my blogs:
 </p>
 <p class="footer">
-  <a href="/blogs/{{blog.name}}/posts" ng-repeat="blog in blogs">
+  <a href="/#/blogs/{{blog.name}}/posts" ng-repeat="blog in blogs">
     <img src="/images/{{blog.name}}.png" alt="{{blog.title}}" class="{{blog.name}}-logo" />
   </a>
 </p>
