--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,4 @@
-<%= render partial: "shared/new_post" %>
-<%= render partial: "post", locals: { post: @post, comments: true } %>
+<%= render partial: "shared/menu", locals: { blog: @blog, is_menu_bar: true } %>
+<div class="posts">
+  <%= render partial: "post", locals: { post: @post } %>
+</div>
