Added JS redirects on all graceful deg pages
Should only be viewed if JS is turned off, so if we can redirect
through JS, it's safe to redirect to the angular version of
the page

--- a/app/views/blogs/menu.html.erb
+++ b/app/views/blogs/menu.html.erb
@@ -1,1 +1,4 @@
+<% content_for :redirect_js do %>
+  window.location = '<%= "#{root_path}#/blogs/#{@blog.to_param}/menu" %>';
+<% end %>
 <%= render partial: "shared/menu", locals: { blog: @blog, is_menu_bar: false } %>
