--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,6 @@
+<% content_for :redirect_js do %>
+  window.location = '<%= "#{root_path}#/blogs/#{@blog.to_param}/posts" %>';
+<% end %>
 <%= render partial: "shared/menu", locals: { blog: @blog, is_menu_bar: true } %>
 <div class="posts">
   <% @posts.each do |post| %>
