--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -10,8 +10,8 @@
     <div class="byline">
       {{post.created_at | date:'MMM d, y h:mm: a'}} (by {{post.author_first_name}})
     </div>
-    <div class="body" ng-bind-html="post.body">
-      {{post.body | trustedHtml}}
+    <div class="body" ng-bind-html="post.summaryOrBody" >
+      {{post.summaryOrBody | trustedHtml}}
     </div>
   </div>
 </div>
