--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,6 +4,6 @@
 <%= render partial: "shared/menu", locals: { blog: @blog, is_menu_bar: true } %>
 <div class="posts">
   <% @posts.each do |post| %>
-    <%= render partial: "post", locals: { post: post } %>
+    <%= render partial: "post", locals: { post: post, summary: true } %>
   <% end %>
 </div>
