Switched post links to use slug

--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -17,7 +17,7 @@
   </a>
   <h3>Previous Posts</h3>
   <div class="link-container" ng-repeat="post in recent">
-    <a href="/#/blogs/{{blog.name}}/posts/{{post.id}}">{{post.title}}</a>
+    <a href="/#/blogs/{{blog.name}}/posts/{{post.slug}}">{{post.title}}</a>
   </div>
   <h3>Archives</h3>
   <div class="link-container" ng-repeat="month in months">
