--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -3,7 +3,8 @@
   <a href="/#/blogs/{{blog.name}}/menu">Menu</a>
 </div>
 <div class="posts">
-  <div class="post" ng-repeat="post in posts">
+  <div class="post" ng-repeat="post in posts" ng-hide="post.isDeleted">
+    <edit-delete-links post="post" posts="posts"></edit-delete-links>
     <h3>
       <a href="/#/blogs/{{blog.name}}/posts/{{post.slug}}" class="post-title">{{post.title}}</a>
     </h3>
