Added navigation to return to main blog page

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -21,6 +21,10 @@ a.bordered {
   padding-bottom: 5px;
 }
 
+.menu-header-link {
+  color: black;
+}
+
 @media (min-width: 624px) {
   .menu {
     width: 30%;
