--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <%= javascript_include_tag "/javascripts/vendor/angular-sanitize.min.js" %>
 
     <%= javascript_include_tag "/javascripts/app/app.js" %>
+
     <%= javascript_include_tag "/javascripts/app/controllers/dashboard.js" %>
     <%= javascript_include_tag "/javascripts/app/controllers/posts.js" %>
     <%= javascript_include_tag "/javascripts/app/controllers/post.js" %>
@@ -39,6 +40,8 @@
 
     <%= javascript_include_tag "/javascripts/app/filters/trusted-html.js" %>
     <%= javascript_include_tag "/javascripts/app/filters/capitalize.js" %>
+
+    <%= javascript_include_tag "/javascripts/app/services/post-service.js" %>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
