Added rich text editing with TinyMCE

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,9 @@
     <%= javascript_include_tag "/javascripts/vendor/angular-route.min.js" %>
     <%= javascript_include_tag "/javascripts/vendor/angular-sanitize.min.js" %>
 
+    <%= javascript_include_tag "/javascripts/vendor/tinymce/tinymce.min.js" %>
+    <%= javascript_include_tag "/javascripts/vendor/ui-tinymce/tinymce.js" %>
+
     <%= javascript_include_tag "/javascripts/app/app.js" %>
 
     <%= javascript_include_tag "/javascripts/app/controllers/dashboard.js" %>
