--- a/public/templates/admin/post-form.html
+++ b/public/templates/admin/post-form.html
@@ -9,7 +9,7 @@
     <p>
       <label for="post">Post:</label>
       <br/>
-      <textarea name="post" id="post" ng-model="post.body"></textarea>
+      <textarea name="post" id="post" ui-tinymce ng-model="post.body"></textarea>
     </p>
     <p class="button-container">
       <button>
