--- a/public/templates/admin/login.html
+++ b/public/templates/admin/login.html
@@ -1,4 +1,11 @@
 <div id="login-container">
+  <div class="header-logout-link-container">
+    <logout></logout>
+  </div>
+  <div class="login-header-link">
+    <a href="/#/"><img src="/images/header-straight.png" alt="Header" /></a>
+  </div>
+
   <form id="login" ng-submit="submit()">
     <div id="error" ng-show="hasError">{{errorMessage}}</div>
     <p>
