--- a/public/templates/admin/post-form.html
+++ b/public/templates/admin/post-form.html
@@ -1,3 +1,4 @@
+<header></header>
 <div id="post-form-container">
   <form id="post-form" ng-submit="submit()">
     <div id="error" ng-show="hasError">{{errorMessage}}</div>
