--- a/public/templates/posts.html
+++ b/public/templates/posts.html
@@ -1,7 +1,5 @@
+<header></header>
 <menu class="menu-bar"></menu>
-<div class="menu-link">
-  <a href="/#/blogs/{{blog.name}}/menu">Menu</a>
-</div>
 <div class="posts">
   <div class="post" ng-repeat="post in posts" ng-hide="post.isDeleted">
     <edit-delete-links post="post" posts="posts"></edit-delete-links>
