--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -1,3 +1,8 @@
+menu {
+  padding: 0;
+  margin: 0;
+}
+
 a.bordered {
   display: block;
   width: 60px;
@@ -21,16 +26,12 @@ a.bordered {
   padding-bottom: 5px;
 }
 
-.menu-header-link {
-  color: black;
-}
-
 @media (min-width: 624px) {
   .menu {
     width: 30%;
     float: right;
   }
-  .menu-link {
+  #menu-header-container {
     display: none;
   }
 }
@@ -38,9 +39,5 @@ a.bordered {
 @media (max-width: 623px) {
   .menu-bar {
     display: none;
-  }
-  .menu-link {
-    text-align: right;
-    padding-right: 20px;
   }
 }
