--- a/public/templates/logout.html
+++ b/public/templates/logout.html
@@ -1,1 +1,3 @@
-<a id="logout-link" href="" ng-show="loggedIn" ng-click="logout()">Logout</a>
+<div class="header-logout-link-container">
+  <a id="logout-link" href="" ng-show="loggedIn" ng-click="logout()">Logout</a>
+</div>
