Fixed issue with device resolution and media queries

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
 
     <%= csrf_meta_tags %>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
+
     <%= javascript_tag do %>
       <%= yield :redirect_js %>
       var UNKNOWN_ERROR = "Sorry! An unknown error occurred.";
