--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,5 +1,7 @@
 <div id="header">
-  <logout></logout>
+  <div class="header-logout-link-container">
+    <logout></logout>
+  </div>
   <div class="menu-link" ng-show="blogName">
     <a href="/#/blogs/{{blogName}}/menu"><img src="/images/menu.png" alt="Menu" /></a>
   </div>
