--- a/public/templates/menu.html
+++ b/public/templates/menu.html
@@ -30,4 +30,5 @@
   <div class="link-container" ng-repeat="month in months">
     <a href="/#/blogs/{{blog.name}}/posts/year/{{month.year}}/month/{{month.month}}">{{month.month_name}}, {{month.year}}</a>
   </div>
+  <div id="login-link-container"><a href="/#/admin/login">login</a></div>
 </div>
