--- a/public/stylesheets/post.css
+++ b/public/stylesheets/post.css
@@ -1,21 +1,38 @@
-a.post-title {
+div.post {
+  background-color: #FFFFFF;
+  margin-top: 10px;
+}
+
+div.post div.header {
+  height: 30px;
+  border-bottom: 2px solid #975267;
+}
+
+div.post div.header div.title {
+  padding: 8px 0 0 2px;
+  float: left;
+}
+
+div.post div.header div.title a {
   color: #000000;
   border: none;
   text-decoration: none;
+  font-size:1.2em;
 }
 
-a.post-title:hover {
+div.post div.header div.title a:hover {
   text-decoration: underline;
 }
 
-.post .byline {
+div.post div.header div.byline {
   font-style: italic;
-  padding-bottom: 5px;
+  float: right;
+  padding: 10px 4px;
 }
 
-.post .body {
-  border-bottom: 1px solid #b5b5b5;
-  padding-bottom: 10px;
+div.post div.body {
+  background: url(/images/post-bg.png);
+  padding: 0 10px 0 10px;
 }
 
 @media (min-width: 624px) {
