--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,3 +1,13 @@
+div.dashboard {
+  text-align: center;
+}
+
+div.dashboard p {
+  display: inline-block;
+  text-align: left;
+  width: 60%;
+}
+
 .sub-menu .link-container {
   display: inline-block;
 }
