--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -1,33 +1,35 @@
 <div class="dashboard">
   <header class="dashboard-header"></header>
-  <p>
-    Hi! I’m Jason. Here are some things about me:
-  </p>
-  <p>
-    I live in Colorado.
-  </p>
-  <p>
-    I’m a writer. Mostly horror. I’m currently working on my first novel, Mad Maddie, the story of Madison Montgomery,
-    a girl who has grown up all her life with an imaginary friend she calls “the burning man”. But when the burning man
-    starts interacting with the real world, it draws the attention of the Order of the Seraph, a cult that wants to set
-    him free, forcing Madison down a path of violent indoctrination.
-  </p>
-  <p>
-    I’m also a software developer.
-  </p>
-  <p>
-    When I’m not doing either of those things, I snowboard, skateboard, hike,
-    climb mountains, play guitar, and...I don’t know, some other stuff.
-  </p>
-  <p>
-    You can <a href="mailto:jasonrush@jasonrush.com">email me</a>, find me on
-    <a href="https://twitter.com/#!/diminish7">Twitter</a>,
-    <a href="https://www.facebook.com/diminish7">Facebook</a>,
-    <a href="https://github.com/diminish7">Github</a>,
-    <a href="https://www.goodreads.com/user/show/5524830-jason-rush">Goodreads</a>, and
-    <a href="https://www.linkedin.com/in/jlrush">LinkedIn</a>,
-    or check out my blogs:
-  </p>
+  <div class="content">
+    <p>
+      Hi! I’m Jason. Here are some things about me:
+    </p>
+    <p>
+      I live in Colorado.
+    </p>
+    <p>
+      I’m a writer. Mostly horror. I’m currently working on my first novel, Mad Maddie, the story of Madison Montgomery,
+      a girl who has grown up all her life with an imaginary friend she calls “the burning man”. But when the burning man
+      starts interacting with the real world, it draws the attention of the Order of the Seraph, a cult that wants to set
+      him free, forcing Madison down a path of violent indoctrination.
+    </p>
+    <p>
+      I’m also a software developer.
+    </p>
+    <p>
+      When I’m not doing either of those things, I snowboard, skateboard, hike,
+      climb mountains, play guitar, and...I don’t know, some other stuff.
+    </p>
+    <p>
+      You can <a href="mailto:jasonrush@jasonrush.com">email me</a>, find me on
+      <a href="https://twitter.com/#!/diminish7">Twitter</a>,
+      <a href="https://www.facebook.com/diminish7">Facebook</a>,
+      <a href="https://github.com/diminish7">Github</a>,
+      <a href="https://www.goodreads.com/user/show/5524830-jason-rush">Goodreads</a>, and
+      <a href="https://www.linkedin.com/in/jlrush">LinkedIn</a>,
+      or check out my blogs:
+    </p>
+  </div>
   <p class="footer">
     <a href="/#/blogs/{{blog.name}}/posts" ng-repeat="blog in blogs">
       <img src="/images/{{blog.name}}.png" alt="{{blog.title}}" class="{{blog.name}}-logo" />
