--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -24,6 +24,12 @@ a img {
   border: 0 none;
 }
 
+blockquote {
+  background-color: #e7e7e7;
+  border: 1px solid #ccc;
+  padding: 0 5px 0 5px;
+}
+
 #header, p.footer {
   width: 100%;
   text-align: center;
