--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -5,7 +5,7 @@
       <p>
         JASON RUSH
         <br/>
-        LOUISVILLE, CO
+        MILWAUKIE, OR
         <br/>
         UNITED STATES
       </p>
