More updates to the dashboard info

--- a/public/templates/dashboard.html
+++ b/public/templates/dashboard.html
@@ -5,24 +5,23 @@
       Hi! I’m Jason. Here are some things about me:
     </p>
     <p>
-      I live in Colorado.
+      I live in Oregon.
     </p>
     <p>
-      I’m a writer. Mostly horror. I’m currently working on my first novel, Mad Maddie, the story of Madison Montgomery,
-      a girl who has grown up all her life with an imaginary friend she calls “the burning man”. But when the burning man
-      starts interacting with the real world, it draws the attention of the Order of the Seraph, a cult that wants to set
-      him free, forcing Madison down a path of violent indoctrination.
+      I’m a writer. Mostly horror. I’m currently working on my first novel, Where the Dead Seep Through,
+      the story of six mountain climbers, trapped in a supernatural storm and haunted by the vengeful
+      ghost of a centuries-old priest.
+    </p>
+    <p>
+      Some of my short fiction has appeared in Pseudopod,
+      <a href="https://pseudopod.org/people/jason-rush/" target="_blank">here</a>.
     </p>
     <p>
       I’m also a software developer.
     </p>
     <p>
-      When I’m not doing either of those things, I snowboard, skateboard, hike,
-      climb mountains, play guitar, and...I don’t know, some other stuff.
-    </p>
-    <p>
       You can <a href="mailto:jasonrush@jasonrush.com">email me</a>, find me on
-      <a href="https://twitter.com/#!/diminish7">Twitter</a>,
+      <a href="https://twitter.com/thejasonrush">Twitter</a>,
       <a href="https://www.facebook.com/diminish7">Facebook</a>,
       <a href="https://github.com/diminish7">Github</a>,
       <a href="https://www.goodreads.com/user/show/5524830-jason-rush">Goodreads</a>, and
